skip turn when the timer is up
